--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 		</style>
 	</head>
 	<body>
-		<script type="text/javascript" src="/js/three_mmi.js"></script>
-		<script type="text/javascript" src="/js/three.js"></script>
-		<script type="text/javascript" src="/js/stats.js"></script>
+		<script type="text/javascript" src="../js/three_mmi.js"></script>
+		<script type="text/javascript" src="../js/three.js"></script>
+		<script type="text/javascript" src="../js/stats.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		<a href = "https://luhcs.vercel.app" target="_blank" style="position:absolute;top:1%;right:40%;width:20%;z-index:10;color:#FFFFFF;text-align:center; text-transform:uppercase;text-decoration:none;">Interação com objeto simples - Nó toral</a>
 		<div class="popup"><div class="text"></div></div>
